# cb

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/cb-clipboard/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: clipboard.rs  config.rs  daemon.rs  errors.rs  hash.rs  lib.rs  main.rs  tui.rs
src/storage/: mod.rs  models.rs  schema.rs  sqlite.rs
