[package]
name = "cb"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
ctrlc = "3"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
