[package]
name = "cbhist"
version = "0.1.0"
edition = "2024"
description = "A fast clipboard manager for macOS with history, search, tags, and a TUI"
license = "MIT"
repository = "https://github.com/faltawy/cb"
homepage = "https://github.com/faltawy/cb"
readme = "README.md"
keywords = ["clipboard", "macos", "history", "daemon", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "cb"
path = "src/lib.rs"

[[bin]]
name = "cb"
path = "src/main.rs"

[dependencies]
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
ctrlc = "3"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
sha2 = "0.10"
ratatui = "0.29"
crossterm = "0.28"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
